--- a/index.html
+++ b/index.html
@@ -5,104 +5,126 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=enge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-      crossorigin="anonymous"
+    <meta
+      name="viewport"
+      content="width=device-width, user-scaleble=no, initial-scale=1, maximum-scale=1.0, minimum-sacale=1.0"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <script
+      src="https://kit.fontawesome.com/2e774614e1.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/estilos.css" />
   </head>
-
   <body>
+    <!--Header-menu-->
     <header>
-      <nav
-        class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar-dark"
-      >
-        <a class="navbar-brand" href="#"> LOGO </a>
+      <div class="header-content">
+        <div class="logo">
+          <h1>Crossing<b>Portals</b></h1>
+        </div>
 
-        <ul class="nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ubicación</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
-          </li>
-        </ul>
-      </nav>
-      <div
-        class="cover d-flex justify-content-center align-items-center flex-column"
-      >
-        <h1>
-          CrossinPortals
-        </h1>
-        <p>
-          El mejor juego DUNGEON-RPG del momento
-        </p>
-        <button class="btn btn-primary">
-          Conoce más
-        </button>
-      </div>
-    </header>
-
-    <section>
-      <div class="container mt-5 mb-5">
-        <div class="row">
-          <div class="card" style="width: 18rem;">
-            <img
-              src=""
-              class="card-img-top"
-              alt="Foto de uno de los desarrolladores"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Juan David Molina</h5>
-              <p class="card-text">
-                Estudiante de Ingenieria Electrónica
-              </p>
-
-              <p class="card-text">
-                18 años
-              </p>
-
-              <p class="card-text">
-                Aprendiz en programación Desarrollador de CrossingPortals
-              </p>
-            </div>
-          </div>
-
-          <div class="container mt-5">
-            <div class="card" style="width: 18rem;">
-              <img
-                src=""
-                class="card-img-top"
-                alt="Foto de uno de los desarrolladores"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Juan Carlos Pepicano</h5>
-                <p class="card-text"></p>
-              </div>
-            </div>
-          </div>
-
-          <div class="container mt-5">
-            <div class="card" style="width: 18rem;">
-              <img
-                src=""
-                class="card-img-top"
-                alt="Foto de uno de los desarrolladores"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Jose Julian Avirama</h5>
-                <p class="card-text"></p>
-              </div>
-            </div>
-          </div>
+        <div class="menu">
+          <nav>
+            <ul>
+              <li><a href="#"> <i class="fas fa-home"></i>Inicio</a></li>
+              <li class="menu-selected"><a href="#" class="text-menu-selected"> 
+                <i class="fas fa-file-alt"></i> Blog</a>
+              </li>
+              <li><a href="#"><i class="fa-solid fa-image"></i>Imagenes</a></li>
+              <li><a href="#"><i class="fas fa-headset"></i>Contacto</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
-    </section>
+
+      <div id="icon-menu">
+        <i class="fas fa-bars"></i>
+      </div>
+    </header>
+    <!--Portada-->
+    <div class="container-all" id="move-content">
+
+        <div class="container-cover">
+          <div class="container-info-cover">
+            <h1>CrossingPortals</h1>
+            <p>Blog para escribir nuestras experiencias diseñando el videojuego</p>
+          </div>
+        </div>
+
+        <div class="container-content">
+          <article>
+            <h1>Como empezo todo...</h1>
+            <p>
+              Oh-oh, me falta el aire (Me falta el aire) Y el corazón,
+              tucún-tucún-tucún Hoy va a correr sangre (Va a correr sangre) Ya sé
+              por dónde se mueve ese bum Hoy voy a convertirme en un criminal, ya no
+              creo en nadie A menos que me convierta en un muerto Hoy voy a vengar a
+              mi hermano, como le juré a mi padre Diente por diente, ojo por ojo es
+              esto Una bicha prestada, porque no soy hampa Pero la rabia que siento
+              no escampa Es tanta que me ahoga, nunca había olido droga Pero, ahora
+              es necesario pa' cumplir con lo que el corazón me implora Siento que
+              se me sale el tórax, la moto a cien por hora Pelo por la bicha y le
+              grito: "¡¿Y ahora?!" Todo pasa muy chola En ráfagas descargo a todo'
+              esos malandros hasta que ya no escupe la pistola Y el corazón,
+              tucún-tucún, tucún-tucún Y las balas, pacan-pacan, pacan-pacan Y el
+              corazón, tucún-tucún, tucún-tucún Y las balas, pacan-pacan, pacan
+            </p>
+            <h1>Pensando en la historia...</h1>
+            <p>
+              Hey, lloro de la arrechera mientras en la acera caigo Escucho a una
+              señora que grita que mataron a Carlos Solo ahí fue cuando sonreí
+              aliviado porque Carlos Fue el bastardo que mató a mi hermano Todo es
+              confuso, escucho uiu-uiu-uiu Lo veo bien y siento frío, frío, frío Un
+              tipo gritando, el mío, el mío, el mío Hasta que ya no escuche na' más
+              que un profundo silencio (Un profundo silencio, un profundo silencio)
+              Varios segundos de calma, mi alma al lado de mi cuerpo Me dije: "Aún
+              no he ido al más allá" Siento un olor a perfume, veo una luz en un
+              túnel Un fuego que me consume, se empezaba a ver atrás
+            </p>
+
+            <img src="Imágenes/tituloJuego.png" alt="" />
+          </article>
+
+          <div class="container-aside">
+            <aside>
+              <img src="Imágenes/boy-avatar-4-1129037.png"alt=""/>
+              <h2>Juan David Molina</h2>
+              <p>Uno de los diseñadores del juego</p>
+              <a href="#"><button>Leer más</button></a>
+            </aside>
+            <aside>
+              <img src="Imágenes/descarga.png"alt=""/>
+              <h2>Juan Carlos Pepicano</h2>
+              <p>Uno de los diseñadores del juego</p>
+              <a href="#"><button>Leer más</button></a>
+            </aside>
+            <aside>
+              <img src="Imágenes/147144.png"alt=""/>
+              <h2>José Julian Avirama</h2>
+              <p>Uno de los diseñadores del juego</p>
+              <a href="#"><button>Leer más</button></a>
+            </aside>
+          </div>
+        </div>
+
+        <div class="container-footer">
+          <footer>
+            <div class="logo-footer">
+              <img src="Imágenes/boy-avatar-4-1129037.png"alt=""/>
+            </div>
+
+            <div class="redes-footer">
+              <a href="#"><i class="fab fa-facebook icon-redes-footer"></i></a>
+              <a href="#"><i class="fab fa-instagram icon-redes-footer"></i></a>
+              <a href="#"><i class="fab fa-twitter icon-redes-footer"></i></a>
+            </div>
+
+            <hr />
+            <h4>©CrossingPortals 2021 - Todos los derechos reservados</h4>
+          </footer>
+        </div>
+
+    </div>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
